CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)


SET (MODULE_INCLUDE_DIRS CACHE INTERNAL "The list of include folders to search for the types module.")
SET (MODULE_LIBS CACHE INTERNAL "The list of libraries that the types module should link against.")

SET (MODULE_INCLUDE_DIRS ${MODULE_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/include)
SET (MODULE_INCLUDE_DIRS ${MODULE_INCLUDE_DIRS} ${CMAKE_CURRENT_BINARY_DIR}/include)


FIND_PACKAGE (Eigen3 3.3 QUIET NO_MODULE)
IF (Eigen3_FOUND)
  SET(HAVE_Eigen3 1)
  OPTION(gramods_ENABLE_Eigen3 "Enable functionality that requires Eigen3" ON)
  IF (gramods_ENABLE_Eigen3)
    SET (MODULE_LIBS ${MODULE_LIBS} Eigen3::Eigen)
  ENDIF()
ENDIF()


CONFIGURE_FILE(
  ${CMAKE_CURRENT_SOURCE_DIR}/include/gmTypes/config_cmake.hh
  ${CMAKE_CURRENT_BINARY_DIR}/include/gmTypes/config.hh)


FILE(GLOB_RECURSE HEADERS include/*.hh)

SOURCE_GROUP("headers" FILES ${HEADERS})

ADD_LIBRARY(gmTypes INTERFACE)

TARGET_INCLUDE_DIRECTORIES(gmTypes INTERFACE ${MODULE_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(gmTypes INTERFACE ${MODULE_LIBS})

INSTALL(TARGETS gmTypes
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(DIRECTORY include/
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
