CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)


SET (MODULE_INCLUDE_DIRS CACHE INTERNAL "The list of include folders to search for the types module.")
SET (MODULE_LIBS CACHE INTERNAL "The list of libraries that the types module should link against.")

LIST (APPEND MODULE_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include)
LIST (APPEND MODULE_INCLUDE_DIRS ${CMAKE_CURRENT_BINARY_DIR}/include)


LIST (APPEND MODULE_LIBS gmCore)

FIND_PACKAGE (Eigen3 QUIET NO_MODULE)
IF (Eigen3_FOUND)
  SET(HAVE_Eigen3 1)
  OPTION(gramods_ENABLE_Eigen3 "Enable functionality that requires Eigen3" ON)
  IF (gramods_ENABLE_Eigen3)
    LIST (APPEND MODULE_LIBS Eigen3::Eigen)
  ENDIF()
ENDIF()


CONFIGURE_FILE(
  ${CMAKE_CURRENT_SOURCE_DIR}/include/gmTypes/config_cmake.hh
  ${CMAKE_CURRENT_BINARY_DIR}/include/gmTypes/config.hh)


FILE(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include/*.hh)
FILE(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)

SOURCE_GROUP("headers" FILES ${HEADERS})
SOURCE_GROUP("sources" FILES ${SOURCES})

ADD_LIBRARY(gmTypes SHARED ${HEADERS} ${SOURCES})

TARGET_INCLUDE_DIRECTORIES(gmTypes PUBLIC ${MODULE_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(gmTypes ${MODULE_LIBS})

SET_PROPERTY(TARGET gmTypes PROPERTY CXX_STANDARD 14)
SET_PROPERTY(TARGET gmTypes PROPERTY WINDOWS_EXPORT_ALL_SYMBOLS TRUE)

INSTALL(TARGETS gmTypes
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(DIRECTORY include/
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
