CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)


SET (MODULE_INCLUDE_DIRS CACHE INTERNAL "The list of include folders to search for the video module.")
SET (MODULE_LIBS CACHE INTERNAL "The list of libraries that the video module should link against.")

SET (MODULE_INCLUDE_DIRS ${MODULE_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/include)
SET (MODULE_INCLUDE_DIRS ${MODULE_INCLUDE_DIRS} ${CMAKE_CURRENT_BINARY_DIR}/include)

FIND_PACKAGE(globjects REQUIRED)
FIND_PACKAGE(glbinding REQUIRED)
SET (MODULE_LIBS ${MODULE_LIBS} globjects::globjects)

FIND_PACKAGE (libuvc)
IF(libuvc_FOUND)
  SET(HAVE_libuvc 1)
  OPTION(gramods_ENABLE_libuvc "" ON)
  IF (gramods_ENABLE_libuvc)
    SET (MODULE_INCLUDE_DIRS ${MODULE_INCLUDE_DIRS} ${libuvc_INCLUDE_DIR})
    SET (MODULE_LIBS ${MODULE_LIBS} ${libuvc_LIBRARIES})
  ENDIF(gramods_ENABLE_libuvc)
ENDIF(libuvc_FOUND)


CONFIGURE_FILE(
  ${CMAKE_CURRENT_SOURCE_DIR}/include/gmVideo/config_cmake.hh
  ${CMAKE_CURRENT_BINARY_DIR}/include/gmVideo/config.hh)


FILE(GLOB_RECURSE HEADERS include/*.hh)
FILE(GLOB_RECURSE SOURCES src/*.cpp)

SOURCE_GROUP("headers" FILES ${HEADERS})
SOURCE_GROUP("sources" FILES ${SOURCES})

ADD_LIBRARY(gmVideo SHARED ${HEADERS} ${SOURCES})

TARGET_INCLUDE_DIRECTORIES(gmVideo PUBLIC ${MODULE_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(gmVideo ${MODULE_LIBS})

SET_PROPERTY(TARGET gmVideo PROPERTY CXX_STANDARD 14)

INSTALL(TARGETS gmVideo
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(DIRECTORY include/
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
